Footer fixes / hide some elements on mobile

--- a/styles/base/utilities.less
+++ b/styles/base/utilities.less
@@ -28,6 +28,12 @@
   display: none;
 }
 
+.util__mobile-hidden {
+  @media @for-phone-only {
+    display: none !important;
+  }
+}
+
 /* Margin and padding mods
 ***************************************************/
 .util__pb-0 {
