--- a/styles/components/footer.less
+++ b/styles/components/footer.less
@@ -17,7 +17,7 @@
   line-height: 28px;
 
   @media @for-phone-only {
-    padding: 4vh;
+    padding: 8vh 0;
   }
   @media @for-tablet-portrait-up {
     padding: 4vw;
